--- a/components/ScoreboardRow.html
+++ b/components/ScoreboardRow.html
@@ -3,7 +3,7 @@
   <div class="points">
     {#each pointsRange as index (index)}
     <div in:fly='{x: 400}' out:fade>
-      <Star {index} />
+      <Star {index} size="10rem" />
     </div>
     {/each}
   </div>
@@ -12,9 +12,9 @@
 
 <style>
   .row {
-    border-top: 1px solid #050505;
-    border-bottom: 1px solid #050505;
-    border-collapse: collapse;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
   }
 
   .name {
