--- a/components/Star.html
+++ b/components/Star.html
@@ -1,13 +1,13 @@
-<svg class="star" xmlns="http://www.w3.org/2000/svg" style='--hue: {hue}' viewBox="0 0 32.218 32.218">
+<svg class="star" xmlns="http://www.w3.org/2000/svg" style='--hue: {hue}; --size: {size}' viewBox="0 0 32.218 32.218">
   <path d="M32.143 12.403c-.494-1.545-3.213-1.898-6.092-2.279-1.578-.207-3.371-.441-3.912-.842-.545-.398-1.305-2.035-1.977-3.482C18.94 3.169 17.783.687 16.165.683l-.03-.005c-1.604.027-2.773 2.479-4.016 5.082-.685 1.439-1.464 3.07-2.007 3.465-.549.391-2.342.611-3.925.803-2.876.35-5.599.678-6.107 2.215s1.479 3.426 3.585 5.422c1.156 1.098 2.465 2.342 2.671 2.982s-.143 2.416-.448 3.977c-.558 2.844-1.085 5.537.219 6.5.312.223.704.336 1.167.326 1.331-.021 3.246-1.057 5.097-2.061 1.387-.758 2.96-1.613 3.66-1.621.677 0 2.255.879 3.647 1.654 1.893 1.051 3.852 2.139 5.185 2.117.416-.006.771-.113 1.061-.322 1.312-.945.812-3.637.285-6.492-.29-1.564-.615-3.344-.41-3.984.212-.637 1.536-1.865 2.703-2.955 2.125-1.977 4.131-3.838 3.641-5.383z" />
 </svg>
 
 <style>
   .star {
-    width: 8rem;
+    width: var(--size);
     padding: 0.5rem;
     margin: auto;
-    height: 8rem;
+    height: var(--size);
     fill: hsl(var(--hue), 100%, 50%);
   }
 </style>
@@ -17,7 +17,8 @@
     data() {
       return {
         saturation: 100,
-        lightness: 50
+        lightness: 50,
+        size: '8rem'
       }
     },
     computed: {
