--- a/components/ResultsBoard.html
+++ b/components/ResultsBoard.html
@@ -97,12 +97,15 @@
   }
 
   div.winner {
-    border: 3px solid var(--primary-color);
+    border: 6px solid var(--primary-color);
     padding: 2rem 0;
     margin: 4rem 0;
     width: auto;
     text-align: center;
     border-radius: 3rem;
+    box-shadow:
+      0 0 0 10px var(--background),
+      0 0 0 12px var(--primary-color);
   }
 
   .big {
